--- a/high-availability-dagster/Chart.yaml
+++ b/high-availability-dagster/Chart.yaml
@@ -8,6 +8,9 @@ dependencies:
   - name: aws-load-balancer-controller
     version: "1.3.3"
     repository: "https://aws.github.io/eks-charts"
+  - name: aws-node-termination-handler
+    version: "0.16.0"
+    repository: "https://aws.github.io/eks-charts"
   - name: traefik
     version: "10.7.1"
     repository: "https://helm.traefik.io/traefik"
