--- a/aws/cluster.yml
+++ b/aws/cluster.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=eksctlschema_0.73.0.json
+# yaml-language-server: $schema=eksctlschema-0.73.0.json
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
