--- a/high-availability-dagster/values.yaml
+++ b/high-availability-dagster/values.yaml
@@ -183,17 +183,21 @@ fluent-bit:
   dashboards:
     enabled: true
   config:
-    
-      # [INPUT]
-      #     Name    tail
-      #     Tag     kube.*
-      #     Path    /var/log/containers/*.log
-      #     Parser  docker
-   outputs: |
+    services: |
+      [SERVICE]
+          Flush        1
+          Log_Level    info
+          Parsers_File parsers.conf
+    inputs: |
+      [INPUT]
+          Name    tail
+          Tag     kube.*
+          Path    /var/log/containers/*.log
+          Parser  docker
       [INPUT]
           Name            systemd
           Tag             host.*
-
+    outputs: |
       [OUTPUT]
           name                   loki
           match                  *
