--- a/aws/cluster.yml
+++ b/aws/cluster.yml
@@ -2,15 +2,10 @@
 apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 metadata:
-  name: dagster-eks-in-existing-vpc
+  name: dagster-eks-in-sml-vpc
   region: eu-west-1
   version: "1.21"
-# fargateProfiles:
-#   - name: fp-test-3
-#     selectors:
-#       - namespace: faculty-dagster
-#         labels:
-#           instanceGroup: fargate
+
 vpc:
   subnets:
     public:
@@ -20,10 +15,85 @@ vpc:
         id: null
       az3:
         id: null
+
+gitops:
+  flux:
+    gitProvider: gitlab
+    flags:
+      owner: null
+      repository: "test"
+      private: "true"
+      branch: "main"
+      namespace: "flux-system"
+      path: "clusters/cluster-12"
+      # team: "team1,team2"
+
+iam:
+  withOIDC: true
+  serviceAccounts:
+  - metadata:
+      name: cluster-autoscaler
+      namespace: faculty-dagster
+    wellKnownPolicies:
+      autoScaler: true
+  - metadata:
+      name: aws-load-balancer-controller
+      namespace: faculty-dagster
+    wellKnownPolicies:
+      awsLoadBalancerController: true
+  - metadata:
+      name: cloudwatch-grafana
+      namespace: faculty-dagster
+    attachPolicy: {
+      "Version": "2012-10-17",
+      "Statement": [
+        {
+          "Sid": "AllowReadingMetricsFromCloudWatch",
+          "Effect": "Allow",
+          "Action": [
+            "cloudwatch:DescribeAlarmsForMetric",
+            "cloudwatch:DescribeAlarmHistory",
+            "cloudwatch:DescribeAlarms",
+            "cloudwatch:ListMetrics",
+            "cloudwatch:GetMetricStatistics",
+            "cloudwatch:GetMetricData",
+            "cloudwatch:GetInsightRuleReport"
+          ],
+          "Resource": "*"
+        },
+        {
+          "Sid": "AllowReadingLogsFromCloudWatch",
+          "Effect": "Allow",
+          "Action": [
+            "logs:DescribeLogGroups",
+            "logs:GetLogGroupFields",
+            "logs:StartQuery",
+            "logs:StopQuery",
+            "logs:GetQueryResults",
+            "logs:GetLogEvents"
+          ],
+          "Resource": "*"
+        },
+        {
+          "Sid": "AllowReadingTagsInstancesRegionsFromEC2",
+          "Effect": "Allow",
+          "Action": ["ec2:DescribeTags", "ec2:DescribeInstances", "ec2:DescribeRegions"],
+          "Resource": "*"
+        },
+        {
+          "Sid": "AllowReadingResourcesForTags",
+          "Effect": "Allow",
+          "Action": "tag:GetResources",
+          "Resource": "*"
+        }
+      ]
+    }
 managedNodeGroups:
   - name: dagster-c5-4xlarge
     instanceType: c5.4xlarge
     desiredCapacity: 0
+    minSize: 0
+    maxSize: 400
     labels:
       instanceGroup: dagster-c5-4xlarge
   - name: dagster-services
