--- a/helm/dagster-ucd-e2e-tests/templates/load-workspace.yaml
+++ b/helm/dagster-ucd-e2e-tests/templates/load-workspace.yaml
@@ -22,7 +22,7 @@ spec:
       command:
         - /config/load-workspace.sh
       args:
-        - {{ .Values.launchPipelineExecution.executionParams.selector.repositoryLocationName }}
+        - {{ .Values.reloadRepositoryLocation.repositoryLocationName }}
         - {{ .Values.dagitGraphQLUrl }}
       volumeMounts:
         - name: config
